--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.0.0",
+    "jest": "^27.4.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
